[package]
name = "balachandran-search-file"
version = "0.1.0"
edition = "2021"
authors = ['Balchandran']
description = "Search the texxt file based on pattern."
license = "MIT OR Apache-2.0"
keywords = ["cli", "search", "demo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
